binaryen/src/binaryen-c.h


typedef uint32_t BinaryenIndex;
typedef uint32_t BinaryenType;
typedef uint32_t BinaryenExternalKind;
typedef uint32_t BinaryenFeatures;
BINARYEN_API BinaryenIndex BinaryenGetFunctionTableSegmentLength(
  BinaryenModuleRef module, BinaryenIndex segmentId);
BINARYEN_API const char* BinaryenGetFunctionTableSegmentData(
  BinaryenModuleRef module, BinaryenIndex segmentId, BinaryenIndex dataId);
BINARYEN_API void BinaryenSetMemory(BinaryenModuleRef module,
                                    BinaryenIndex initial,
                                    BinaryenIndex maximum,
                                    const char* exportName,
                                    const char** segments,
                                    int8_t* segmentPassive,
                                    BinaryenExpressionRef* segmentOffsets,
                                    BinaryenIndex* segmentSizes,
                                    BinaryenIndex numSegments,
                                    uint8_t shared);
BINARYEN_API uint32_t BinaryenGetNumMemorySegments(BinaryenModuleRef module);
BINARYEN_API uint32_t
BinaryenGetMemorySegmentByteOffset(BinaryenModuleRef module, BinaryenIndex id);
BINARYEN_API size_t BinaryenGetMemorySegmentByteLength(BinaryenModuleRef module,
                                                       BinaryenIndex id);
BINARYEN_API int BinaryenGetMemorySegmentPassive(BinaryenModuleRef module,
                                                 BinaryenIndex id);
BINARYEN_API void BinaryenCopyMemorySegmentData(BinaryenModuleRef module,
                                                BinaryenIndex id,
                                                char* buffer);
BINARYEN_API void BinaryenSetStart(BinaryenModuleRef module,
                                   BinaryenFunctionRef start);
BINARYEN_API BinaryenFeatures
BinaryenModuleGetFeatures(BinaryenModuleRef module);
BINARYEN_API void BinaryenModuleSetFeatures(BinaryenModuleRef module,
                                            BinaryenFeatures features);
BINARYEN_API BinaryenModuleRef BinaryenModuleParse(const char* text);
BINARYEN_API void BinaryenModulePrint(BinaryenModuleRef module);
BINARYEN_API void BinaryenModulePrintAsmjs(BinaryenModuleRef module);
BINARYEN_API int BinaryenModuleValidate(BinaryenModuleRef module);
BINARYEN_API void BinaryenModuleOptimize(BinaryenModuleRef module);
BINARYEN_API int BinaryenGetOptimizeLevel(void);
BINARYEN_API void BinaryenSetOptimizeLevel(int level);
BINARYEN_API int BinaryenGetShrinkLevel(void);
BINARYEN_API void BinaryenSetShrinkLevel(int level);
BINARYEN_API int BinaryenGetDebugInfo(void);
BINARYEN_API void BinaryenSetDebugInfo(int on);
BINARYEN_API int BinaryenGetLowMemoryUnused(void);
BINARYEN_API void BinaryenSetLowMemoryUnused(int on);
BINARYEN_API const char* BinaryenGetPassArgument(const char* name);
BINARYEN_API void BinaryenSetPassArgument(const char* name, const char* value);
BINARYEN_API void BinaryenClearPassArguments();
BINARYEN_API BinaryenIndex BinaryenGetAlwaysInlineMaxSize(void);
BINARYEN_API void BinaryenSetAlwaysInlineMaxSize(BinaryenIndex size);
BINARYEN_API BinaryenIndex BinaryenGetFlexibleInlineMaxSize(void);
BINARYEN_API void BinaryenSetFlexibleInlineMaxSize(BinaryenIndex size);
BINARYEN_API BinaryenIndex BinaryenGetOneCallerInlineMaxSize(void);
BINARYEN_API void BinaryenSetOneCallerInlineMaxSize(BinaryenIndex size);
BINARYEN_API void BinaryenModuleRunPasses(BinaryenModuleRef module,
                                          const char** passes,
                                          BinaryenIndex numPasses);
BINARYEN_API void BinaryenModuleAutoDrop(BinaryenModuleRef module);
size_t BINARYEN_API BinaryenModuleWrite(BinaryenModuleRef module,
                                        char* output,
                                        size_t outputSize);
BINARYEN_API size_t BinaryenModuleWriteText(BinaryenModuleRef module,
                                            char* output,
                                            size_t outputSize);
BINARYEN_API char* BinaryenModuleAllocateAndWriteText(BinaryenModuleRef module);
BINARYEN_API void BinaryenModuleAllocateAndWriteMut(BinaryenModuleRef module, const char* sourceMapUrl,
  void** binary, size_t* binaryBytes, char** sourceMap);
BINARYEN_API BinaryenModuleRef BinaryenModuleRead(char* input,
                                                  size_t inputSize);
BINARYEN_API void BinaryenModuleInterpret(BinaryenModuleRef module);
BINARYEN_API BinaryenIndex BinaryenModuleAddDebugInfoFileName(
  BinaryenModuleRef module, const char* filename);
BINARYEN_API const char*
BinaryenModuleGetDebugInfoFileName(BinaryenModuleRef module,
                                   BinaryenIndex index);
BINARYEN_API const char* BinaryenFunctionGetName(BinaryenFunctionRef func);
BINARYEN_API BinaryenType BinaryenFunctionGetParams(BinaryenFunctionRef func);
BINARYEN_API BinaryenType BinaryenFunctionGetResults(BinaryenFunctionRef func);
BINARYEN_API BinaryenIndex BinaryenFunctionGetNumVars(BinaryenFunctionRef func);
BINARYEN_API BinaryenType BinaryenFunctionGetVar(BinaryenFunctionRef func,
                                                 BinaryenIndex index);
BINARYEN_API BinaryenExpressionRef
BinaryenFunctionGetBody(BinaryenFunctionRef func);
BINARYEN_API void BinaryenFunctionOptimize(BinaryenFunctionRef func,
                                           BinaryenModuleRef module);
BINARYEN_API void BinaryenFunctionRunPasses(BinaryenFunctionRef func,
                                            BinaryenModuleRef module,
                                            const char** passes,
                                            BinaryenIndex numPasses);
BINARYEN_API void BinaryenFunctionSetDebugLocation(BinaryenFunctionRef func,
                                                   BinaryenExpressionRef expr,
                                                   BinaryenIndex fileIndex,
                                                   BinaryenIndex lineNumber,
                                                   BinaryenIndex columnNumber);
BINARYEN_API const char* BinaryenGlobalGetName(BinaryenGlobalRef global);
BINARYEN_API BinaryenType BinaryenGlobalGetType(BinaryenGlobalRef global);
BINARYEN_API int BinaryenGlobalIsMutable(BinaryenGlobalRef global);
BINARYEN_API BinaryenExpressionRef
BinaryenGlobalGetInitExpr(BinaryenGlobalRef global);
BINARYEN_API const char* BinaryenEventGetName(BinaryenEventRef event);
BINARYEN_API int BinaryenEventGetAttribute(BinaryenEventRef event);
BINARYEN_API BinaryenType BinaryenEventGetParams(BinaryenEventRef event);
BINARYEN_API BinaryenType BinaryenEventGetResults(BinaryenEventRef event);
BINARYEN_API const char*
BinaryenFunctionImportGetModule(BinaryenFunctionRef import);
BINARYEN_API const char*
BinaryenGlobalImportGetModule(BinaryenGlobalRef import);
BINARYEN_API const char* BinaryenEventImportGetModule(BinaryenEventRef import);
BINARYEN_API const char*
BinaryenFunctionImportGetBase(BinaryenFunctionRef import);
BINARYEN_API const char* BinaryenGlobalImportGetBase(BinaryenGlobalRef import);
BINARYEN_API const char* BinaryenEventImportGetBase(BinaryenEventRef import);
BINARYEN_API BinaryenExternalKind
BinaryenExportGetKind(BinaryenExportRef export_);
BINARYEN_API const char* BinaryenExportGetName(BinaryenExportRef export_);
BINARYEN_API const char* BinaryenExportGetValue(BinaryenExportRef export_);
BINARYEN_API uint32_t BinaryenGetNumExports(BinaryenModuleRef module);
BINARYEN_API BinaryenExportRef
BinaryenGetExportByIndex(BinaryenModuleRef module, BinaryenIndex id);
BINARYEN_API void BinaryenAddCustomSection(BinaryenModuleRef module,
                                           const char* name,
                                           const char* contents,
                                           BinaryenIndex contentsSize);
typedef uint32_t BinaryenSideEffects;
BINARYEN_API BinaryenSideEffects BinaryenSideEffectNone(void);
BINARYEN_API BinaryenSideEffects BinaryenSideEffectBranches(void);
BINARYEN_API BinaryenSideEffects BinaryenSideEffectCalls(void);
BINARYEN_API BinaryenSideEffects BinaryenSideEffectReadsLocal(void);
BINARYEN_API BinaryenSideEffects BinaryenSideEffectWritesLocal(void);
BINARYEN_API BinaryenSideEffects BinaryenSideEffectReadsGlobal(void);
BINARYEN_API BinaryenSideEffects BinaryenSideEffectWritesGlobal(void);
BINARYEN_API BinaryenSideEffects BinaryenSideEffectReadsMemory(void);
BINARYEN_API BinaryenSideEffects BinaryenSideEffectWritesMemory(void);
BINARYEN_API BinaryenSideEffects BinaryenSideEffectImplicitTrap(void);
BINARYEN_API BinaryenSideEffects BinaryenSideEffectIsAtomic(void);
BINARYEN_API BinaryenSideEffects BinaryenSideEffectThrows(void);
BINARYEN_API BinaryenSideEffects BinaryenSideEffectAny(void);
BINARYEN_API BinaryenSideEffects BinaryenExpressionGetSideEffects(
  BinaryenExpressionRef expr, BinaryenFeatures features);
struct Relooper;
typedef struct CFG::Relooper* RelooperRef;
typedef struct CFG::Block* RelooperBlockRef;
typedef struct Relooper* RelooperRef;
typedef struct RelooperBlock* RelooperBlockRef;
BINARYEN_API RelooperRef RelooperCreate(BinaryenModuleRef module);
BINARYEN_API RelooperBlockRef RelooperAddBlock(RelooperRef relooper,
                                               BinaryenExpressionRef code);
BINARYEN_API void RelooperAddBranch(RelooperBlockRef from,
                                    RelooperBlockRef to,
                                    BinaryenExpressionRef condition,
                                    BinaryenExpressionRef code);
BINARYEN_API RelooperBlockRef
RelooperAddBlockWithSwitch(RelooperRef relooper,
                           BinaryenExpressionRef code,
                           BinaryenExpressionRef condition);
BINARYEN_API void RelooperAddBranchForSwitch(RelooperBlockRef from,
                                             RelooperBlockRef to,
                                             BinaryenIndex* indexes,
                                             BinaryenIndex numIndexes,
                                             BinaryenExpressionRef code);
BINARYEN_API BinaryenExpressionRef RelooperRenderAndDispose(
  RelooperRef relooper, RelooperBlockRef entry, BinaryenIndex labelHelper);
BINARYEN_API void BinaryenSetAPITracing(int on);
BINARYEN_API void BinaryenSetColorsEnabled(int enabled);
BINARYEN_API int BinaryenAreColorsEnabled();