src/Bindings/Binaryen/Raw.hs


foreign import ccall unsafe "BinaryenGetFunctionTableSegmentLength"
  getFunctionTableSegmentLength ::
    Module -> Index -> IO Index

foreign import ccall unsafe "BinaryenGetFunctionTableSegmentData"
  getFunctionTableSegmentData ::
    Module ->
    Index ->
    Index ->
    IO (Ptr CChar)

foreign import ccall unsafe "BinaryenSetMemory"
  setMemory ::
    Module ->
    Index ->
    Index ->
    Ptr CChar ->
    Ptr (Ptr CChar) ->
    Ptr Int8 ->
    Ptr Expression ->
    Ptr Index ->
    Index ->
    Word8 ->
    IO ()

foreign import ccall unsafe "BinaryenGetNumMemorySegments"
  getNumMemorySegments ::
    Module -> IO Word32

foreign import ccall unsafe "BinaryenGetMemorySegmentByteOffset"
  getMemorySegmentByteOffset ::
    Module -> Index -> IO Word32

foreign import ccall unsafe "BinaryenGetMemorySegmentByteLength"
  getMemorySegmentByteLength ::
    Module -> Index -> IO CSize

foreign import ccall unsafe "BinaryenGetMemorySegmentPassive"
  getMemorySegmentPassive ::
    Module -> Index -> IO CInt

foreign import ccall unsafe "BinaryenCopyMemorySegmentData"
  copyMemorySegmentData ::
    Module -> Index -> Ptr CChar -> IO ()

foreign import ccall unsafe "BinaryenSetStart"
  setStart ::
    Module -> Function -> IO ()

foreign import ccall unsafe "BinaryenModuleGetFeatures"
  moduleGetFeatures ::
    Module -> IO Features

foreign import ccall unsafe "BinaryenModuleSetFeatures"
  moduleSetFeatures ::
    Module -> Features -> IO ()

foreign import ccall unsafe "BinaryenModuleParse"
  moduleParse ::
    Ptr CChar -> IO Module

foreign import ccall unsafe "BinaryenModulePrint"
  modulePrint ::
    Module -> IO ()

foreign import ccall unsafe "BinaryenModulePrintAsmjs"
  modulePrintAsmjs ::
    Module -> IO ()

foreign import ccall unsafe "BinaryenModuleValidate"
  moduleValidate ::
    Module -> IO CInt

foreign import ccall unsafe "BinaryenModuleOptimize"
  moduleOptimize ::
    Module -> IO ()

foreign import ccall unsafe "BinaryenGetOptimizeLevel"
  getOptimizeLevel ::
    IO CInt

foreign import ccall unsafe "BinaryenSetOptimizeLevel"
  setOptimizeLevel ::
    CInt -> IO ()

foreign import ccall unsafe "BinaryenGetShrinkLevel"
  getShrinkLevel ::
    IO CInt

foreign import ccall unsafe "BinaryenSetShrinkLevel"
  setShrinkLevel ::
    CInt -> IO ()

foreign import ccall unsafe "BinaryenGetDebugInfo"
  getDebugInfo ::
    IO CInt

foreign import ccall unsafe "BinaryenSetDebugInfo"
  setDebugInfo ::
    CInt -> IO ()

foreign import ccall unsafe "BinaryenGetLowMemoryUnused"
  getLowMemoryUnused ::
    IO CInt

foreign import ccall unsafe "BinaryenSetLowMemoryUnused"
  setLowMemoryUnused ::
    CInt -> IO ()

foreign import ccall unsafe "BinaryenGetPassArgument"
  getPassArgument ::
    Ptr CChar -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenSetPassArgument"
  setPassArgument ::
    Ptr CChar -> Ptr CChar -> IO ()

foreign import ccall unsafe "BinaryenClearPassArguments"
  clearPassArguments ::
    IO ()

foreign import ccall unsafe "BinaryenGetAlwaysInlineMaxSize"
  getAlwaysInlineMaxSize ::
    IO Index

foreign import ccall unsafe "BinaryenSetAlwaysInlineMaxSize"
  setAlwaysInlineMaxSize ::
    Index -> IO ()

foreign import ccall unsafe "BinaryenGetFlexibleInlineMaxSize"
  getFlexibleInlineMaxSize ::
    IO Index

foreign import ccall unsafe "BinaryenSetFlexibleInlineMaxSize"
  setFlexibleInlineMaxSize ::
    Index -> IO ()

foreign import ccall unsafe "BinaryenGetOneCallerInlineMaxSize"
  getOneCallerInlineMaxSize ::
    IO Index

foreign import ccall unsafe "BinaryenSetOneCallerInlineMaxSize"
  setOneCallerInlineMaxSize ::
    Index -> IO ()

foreign import ccall unsafe "BinaryenModuleRunPasses"
  moduleRunPasses ::
    Module -> Ptr (Ptr CChar) -> Index -> IO ()

foreign import ccall unsafe "BinaryenModuleAutoDrop"
  moduleAutoDrop ::
    Module -> IO ()

foreign import ccall unsafe "BinaryenModuleWrite"
  moduleWrite ::
    Module -> Ptr CChar -> CSize -> IO CSize

foreign import ccall unsafe "BinaryenModuleWriteText"
  moduleWriteText ::
    Module -> Ptr CChar -> CSize -> IO CSize

foreign import ccall unsafe "BinaryenModuleAllocateAndWriteMut"
  moduleAllocateAndWriteMut ::
    Module ->
    Ptr CChar ->
    Ptr (Ptr ()) ->
    Ptr CSize ->
    Ptr (Ptr CChar) ->
    IO ()

foreign import ccall unsafe "BinaryenModuleAllocateAndWriteText"
  moduleAllocateAndWriteText ::
    Module -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenModuleRead"
  moduleRead ::
    Ptr CChar -> CSize -> IO Module

foreign import ccall unsafe "BinaryenModuleInterpret"
  moduleInterpret ::
    Module -> IO ()

foreign import ccall unsafe "BinaryenModuleAddDebugInfoFileName"
  moduleAddDebugInfoFileName ::
    Module -> Ptr CChar -> IO Index

foreign import ccall unsafe "BinaryenModuleGetDebugInfoFileName"
  moduleGetDebugInfoFileName ::
    Module -> Index -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenFunctionGetName"
  functionGetName ::
    Function -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenFunctionGetParams"
  functionGetParams ::
    Function -> IO Type

foreign import ccall unsafe "BinaryenFunctionGetResults"
  functionGetResults ::
    Function -> IO Type

foreign import ccall unsafe "BinaryenFunctionGetNumVars"
  functionGetNumVars ::
    Function -> IO Index

foreign import ccall unsafe "BinaryenFunctionGetVar"
  functionGetVar ::
    Function -> Index -> IO Type

foreign import ccall unsafe "BinaryenFunctionGetBody"
  functionGetBody ::
    Function -> IO Expression

foreign import ccall unsafe "BinaryenFunctionOptimize"
  functionOptimize ::
    Function -> Module -> IO ()

foreign import ccall unsafe "BinaryenFunctionRunPasses"
  functionRunPasses ::
    Function ->
    Module ->
    Ptr (Ptr CChar) ->
    Index ->
    IO ()

foreign import ccall unsafe "BinaryenFunctionSetDebugLocation"
  functionSetDebugLocation ::
    Function ->
    Expression ->
    Index ->
    Index ->
    Index ->
    IO ()

foreign import ccall unsafe "BinaryenGlobalGetName"
  globalGetName ::
    Global -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenGlobalGetType"
  globalGetType ::
    Global -> IO Type

foreign import ccall unsafe "BinaryenGlobalIsMutable"
  globalIsMutable ::
    Global -> IO CInt

foreign import ccall unsafe "BinaryenGlobalGetInitExpr"
  globalGetInitExpr ::
    Global -> IO Expression

foreign import ccall unsafe "BinaryenEventGetName"
  eventGetName ::
    Event -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenEventGetAttribute"
  eventGetAttribute ::
    Event -> IO CInt

foreign import ccall unsafe "BinaryenEventGetParams"
  eventGetParams ::
    Event -> IO Type

foreign import ccall unsafe "BinaryenEventGetResults"
  eventGetResults ::
    Event -> IO Type

foreign import ccall unsafe "BinaryenFunctionImportGetModule"
  functionImportGetModule ::
    Function -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenGlobalImportGetModule"
  globalImportGetModule ::
    Global -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenEventImportGetModule"
  eventImportGetModule ::
    Event -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenFunctionImportGetBase"
  functionImportGetBase ::
    Function -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenGlobalImportGetBase"
  globalImportGetBase ::
    Global -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenEventImportGetBase"
  eventImportGetBase ::
    Event -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenExportGetKind"
  exportGetKind ::
    Export -> IO ExternalKind

foreign import ccall unsafe "BinaryenExportGetName"
  exportGetName ::
    Export -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenExportGetValue"
  exportGetValue ::
    Export -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenGetNumExports"
  getNumExports ::
    Module -> IO Word32

foreign import ccall unsafe "BinaryenGetExportByIndex"
  getExportByIndex ::
    Module -> Index -> IO Export

foreign import ccall unsafe "BinaryenAddCustomSection"
  addCustomSection ::
    Module ->
    Ptr CChar ->
    Ptr CChar ->
    Index ->
    IO ()

type SideEffects = Word32

foreign import ccall unsafe "BinaryenSideEffectNone" sideEffectNone :: SideEffects
foreign import ccall unsafe "BinaryenSideEffectBranches" sideEffectBranches :: SideEffects
foreign import ccall unsafe "BinaryenSideEffectCalls" sideEffectCalls :: SideEffects
foreign import ccall unsafe "BinaryenSideEffectReadsLocal" sideEffectReadsLocal :: SideEffects
foreign import ccall unsafe "BinaryenSideEffectWritesLocal" sideEffectWritesLocal :: SideEffects
foreign import ccall unsafe "BinaryenSideEffectReadsGlobal" sideEffectReadsGlobal :: SideEffects
foreign import ccall unsafe "BinaryenSideEffectWritesGlobal" sideEffectWritesGlobal :: SideEffects
foreign import ccall unsafe "BinaryenSideEffectReadsMemory" sideEffectReadsMemory :: SideEffects
foreign import ccall unsafe "BinaryenSideEffectWritesMemory" sideEffectWritesMemory :: SideEffects
foreign import ccall unsafe "BinaryenSideEffectImplicitTrap" sideEffectImplicitTrap :: SideEffects
foreign import ccall unsafe "BinaryenSideEffectIsAtomic" sideEffectIsAtomic :: SideEffects
foreign import ccall unsafe "BinaryenSideEffectThrows" sideEffectThrows :: SideEffects
foreign import ccall unsafe "BinaryenSideEffectAny" sideEffectAny :: SideEffects

foreign import ccall unsafe "BinaryenExpressionGetSideEffects"
  expressionGetSideEffects ::
    Expression -> Features -> IO SideEffects

newtype Relooper = Relooper (Ptr Relooper)
  deriving newtype (Eq, Show, Storable)

newtype RelooperBlock = RelooperBlock (Ptr RelooperBlock)
  deriving newtype (Eq, Show, Storable)

foreign import ccall unsafe "RelooperCreate"
  c_RelooperCreate ::
    Module -> IO Relooper

foreign import ccall unsafe "RelooperAddBlock"
  c_RelooperAddBlock ::
    Relooper -> Expression -> IO RelooperBlock

foreign import ccall unsafe "RelooperAddBranch"
  c_RelooperAddBranch ::
    RelooperBlock ->
    RelooperBlock ->
    Expression ->
    Expression ->
    IO ()

foreign import ccall unsafe "RelooperAddBlockWithSwitch"
  c_RelooperAddBlockWithSwitch ::
    Relooper ->
    Expression ->
    Expression ->
    IO RelooperBlock

foreign import ccall unsafe "RelooperAddBranchForSwitch"
  c_RelooperAddBranchForSwitch ::
    RelooperBlock ->
    RelooperBlock ->
    Ptr Index ->
    Index ->
    Expression ->
    IO ()

foreign import ccall unsafe "RelooperRenderAndDispose"
  c_RelooperRenderAndDispose ::
    Relooper ->
    RelooperBlock ->
    Index ->
    IO Expression

foreign import ccall unsafe "BinaryenSetAPITracing"
  setAPITracing ::
    CInt -> IO ()

foreign import ccall unsafe "BinaryenSetColorsEnabled"
  setColorsEnabled ::
    CInt -> IO ()

foreign import ccall unsafe "BinaryenAreColorsEnabled"
  areColorsEnabled ::
    IO CInt
